Populate signature status in artifact API
This Commit add signature status into response of list artifact API.
