# api/v2.0/swagger.yaml
@@ -497,6 +497,10 @@ definitions:
         type: boolean
         x-omitempty: false
         description: The immutable status of the tag
+      signed:
+        type: boolean
+        x-omitempty: false
+        description: The attribute indicates whether the tag is signed or not
   ExtraAttrs:
     type: object
     additionalProperties:
